@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix #289: some checks could leak across array bounds
+    - Fix #285: Mocking around missing symbols
+
 0.000160  2024-04-25 11:18:36+01:00 Europe/Lisbon
 
     - Fix #291: done_testing under AsyncSubtest does not make sense
